# market-intelligence-radar

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  schema.sql
.github/workflows/: ci.yml
app/: package-lock.json  package.json
app/data/: blocked-sectors.json  division-icps.json  excluded-institution-types.json  excluded-roles.json  exclusion-keywords.json  icp-global-rules.json  sources.json  taxonomy.json
app/src/app/: globals.css  layout.tsx
app/src/app/admin/: page.tsx
app/src/app/admin/_components/: division-breakdown.tsx  division-icps.tsx  exclusion-rules.tsx  exclusion-suggestions.tsx  pipeline-metrics.tsx  scan-history.tsx  sentiment-chart.tsx  source-manager.tsx  stats-cards.tsx  top-sources.tsx
app/src/app/dashboard/: layout.tsx  page.tsx
app/src/components/: login-screen.tsx
app/src/components/layout/: sidebar.tsx
app/src/components/tabs/: articles.tsx  companies.tsx  deals.tsx  overview.tsx  people.tsx  signals.tsx
app/src/components/ui/: dev-banner.tsx  division-map.tsx  live-badge.tsx  pagination.tsx  range-slider.tsx
app/src/lib/: api-client.ts  auth.tsx  db.ts  division.tsx  divisions.ts  env.ts  icp-types.ts  pg-queries.ts  server-auth.ts  theme.tsx  use-intelligence.ts
docs/: CONFIGURATION.md
mir/: __init__.py  __main__.py  classifier.py  config.py  crm_import.py  data_paths.py  db.py  enricher.py  exclusions.py  extractor.py  icp_policy.py  icps.py  llm.py  matcher.py  pg_storage.py  rate_limit.py  scanner.py  scraper.py  sources.py
(+18 files in other folders)
